<resources>
    <string name="app_name">Quiz app</string>
    <string name="start">start</string>
    <string name="next">next</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="questions">Questions</string>
    <string name="quit">Quit</string>
    <string name="correct_answer">"Final Score %1$d"</string>
    <string name="please_press_start_to_begin_quiz">Please press start to begin quiz</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
</resources>
